package iterator.sample;

public interface Aggregate<T> {
    public abstract Iterator<T> iterator();
}
